# RustMultiplayer

./: Cargo.toml  README.md
src/: client_requests.rs  lib.rs  main.rs  multiplayer_client.rs  multiplayer_server.rs  requests.rs
src/app/: mod.rs  server.rs
src/app/client/: mod.rs
src/app/client/gui_client/: gui_renderer.rs  mod.rs  renderer.rs  shader.wgsl
src/app/client/gui_client/guis/: disconnected.rs  ending.rs  ingame.rs  lobby.rs  mod.rs
src/app/client/rendering/: mod.rs  renderer.rs
src/app/server/: chat.rs  client_session.rs  mod.rs  routes.rs
src/game/: common.rs  math.rs  mod.rs  world.rs
src/rendering/: mod.rs  renderer.rs
tests/: integration_tests.rs
