[package]
name = "rust_multiplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.24"
env_logger = "0.11.6"

tokio = { version = "*", features = ["full"] }
thiserror = "*"
rand = "*"

ctrlc = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pollster = "0.4"
wgpu = "24.0.0"
winit = "0.30.8"
bytemuck = "1.22.0"

clap = { version = "4.5.31", features = ["derive"] }